<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="1dp"
    tools:context=".MainActivity">

    <!-- Header -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:background="@drawable/rounded_background"
        android:gravity="center"
        android:orientation="horizontal">
        <!-- Agrega elementos del encabezado aquí -->

        <ImageView
            android:layout_width="74dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:contentDescription="@string/logo_de_la_aplicacion"
            android:src="@drawable/logo" />

        <TextSwitcher
            android:id="@+id/textSwitcher"
            android:layout_width="242dp"
            android:layout_height="69dp"
            android:inAnimation="@anim/slide_in_right" />

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:contentDescription="@string/logo"
            android:padding="16dp"
            android:src="@drawable/image" />

    </LinearLayout>

    <!-- Barra de Navegación (BottomNavigationView) -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_background_nav"
        app:menu="@menu/bottom_nav_menu"
        tools:ignore="VisualLintBottomNav" />

    <!-- Contenido Principal -->
    <FrameLayout
        android:id="@+id/mainContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:layout_weight="1"
        tools:ignore="InefficientWeight">
        <!-- Agrega elementos del contenido principal aquí -->
    </FrameLayout>

    <!-- Footer -->
    <LinearLayout
        android:id="@+id/footerContent"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/rounded_background"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <!-- Información de contacto -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contacto"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adrile_boutique2"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carrera_9a_4_17"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/palermo_huila_colombia"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tel_fono_57_316_759_96_27"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_adrileboutique_gmail_com"
                android:textColor="@android:color/white" />

            <!-- Enlaces -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enlaces"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inicio"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/productos"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Contacto"
                android:textColor="@android:color/white"
                tools:ignore="HardcodedText" />

            <!-- Síguenos -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_guenos"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/facebook"
                    android:contentDescription="@string/todo" />

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/logo_whatsapp"
                    android:contentDescription="@string/todo2" />

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/instagram"
                    android:contentDescription="@string/todo3" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
</ScrollView>