<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PanelActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/rounded_background"
        android:gravity="center"
        android:orientation="horizontal">
        <!-- Agrega elementos del encabezado aquí -->

        <ImageView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/logo_de_la_aplicacion"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/txt"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:inAnimation="@anim/slide_in_right"
            android:text="@string/adrile_boutique"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <ImageView
            android:layout_width="134dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/logo"
            android:padding="16dp"
            android:src="@drawable/image" />

    </LinearLayout>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:theme="@style/Theme.Adrile.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#FFCCE0"
            app:popupTheme="@style/Theme.Adrile.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_panel" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>